# event-sourcing

./: Cargo.toml
database/: create.sql
src/: database.rs  error.rs  main.rs
src/aggregates/: affiliate.rs  mod.rs  trade.rs
