[package]
name = "event-sourcing"
version = "0.1.0"
authors = ["Tim Bergqvist <boggeb@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql="21.0.1"
serde_json = "1.0.67"
serde = { version = "1.0.130", features = ["derive"] }